--- a/Copy_of_team_alpha_google_play_store_app_analysis.ipynb
+++ b/Copy_of_team_alpha_google_play_store_app_analysis.ipynb
@@ -92,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***final project link***  :-\n"
+        "***final project link***  :-https://github.com/Nitikeshwagh/EDA_play_store_project/blob/main/Copy_of_team_alpha_google_play_store_app_analysis.ipynb\n"
       ],
       "metadata": {
         "id": "yQaldy8SH6Dl"
@@ -121,7 +121,7 @@
         "\n",
         "9 Average rating free vs paid\n",
         "\n",
-        "10 category generate most revenue(Price) ?\n",
+        "10 What is Percentage of apps belonging to each category in the playstore ?\n",
         "\n",
         "11 Which Category have the most Sentiment\n",
         "\n",
